# llm

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RUN_APP.md  RUN_PICOLLM.md  THIRD_PARTY_LICENSES.md  TODO.md  main.py  pyproject.toml
apps/hf_space_picollm_demo/: Dockerfile  README.md  requirements.txt
apps/opentui_ai_sdk_chat/: .env.example  README.md  package.json  tsconfig.json
apps/vercel_ai_sdk_chat/: README.md  package-lock.json  package.json
course_tools/: __init__.py  runtime.py
notebooks/causal_language_modeling/: lecture_walkthrough.ipynb
notebooks/chat_format_and_sft/: lecture_walkthrough.ipynb
notebooks/decoder_block/: lecture_walkthrough.ipynb
notebooks/embedding_layer/: lecture_walkthrough.ipynb
notebooks/encoder_block/: lecture_walkthrough.ipynb
notebooks/feed_forward_network/: lecture_walkthrough.ipynb
notebooks/inference_and_sampling/: lecture_walkthrough.ipynb
notebooks/inference_runtime_and_kv_cache/: lecture_walkthrough.ipynb
notebooks/layer_normalization/: lecture_walkthrough.ipynb
notebooks/lora_and_parameter_efficient_fine_tuning/: lecture_walkthrough.ipynb
notebooks/multi_head_attention/: lecture_walkthrough.ipynb
notebooks/nanochat_architecture/: lecture_walkthrough.ipynb
notebooks/positional_encoding/: lecture_walkthrough.ipynb
notebooks/quantization/: lecture_walkthrough.ipynb
notebooks/real_chatbot_workflow/: lecture_walkthrough.ipynb
notebooks/scaled_dot_product_attention/: lecture_walkthrough.ipynb
notebooks/sft_flow/: lecture_walkthrough.ipynb
notebooks/tokenization/: lecture_walkthrough.ipynb
notebooks/training_loop/: lecture_walkthrough.ipynb
picollm/: HUGGING_FACE_SETUP.md  README.md  RUNBOOK.md  __init__.py
picollm/accelerated/: README.md  checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  entrypoints.py  execution.py  exporters.py  flash_attention.py  fp8.py  gpt.py  optim.py  report.py  speedrun.sh  speedrun_config.py  speedrun_doctor.py  speedrun_fast.sh  tokenizer.py  ui.html
picollm/analysis/: __init__.py  inspect_activations.py
picollm/common/: __init__.py  chat.py  conversation.py  device.py  hub.py  loading.py  telemetry.py  training_preview.py
picollm/eval/: README.md  __init__.py  chat_smoke.py  compare_checkpoints.py  latency_benchmark.py  prompt_suite.json  report_template.md  run_lm_eval.py  safety_prompt_suite.json  safety_red_team.py
picollm/nanochat_backend/: README.md  checkpoint_manager.py  common.py  dataloader.py  dataset.py  engine.py  flash_attention.py  fp8.py  gpt.py  loss_eval.py  optim.py  report.py  speedrun.sh  tokenizer.py  ui.html
picollm/pretrain_cloud/: README.md  VAST_AI_SETUP.md  __init__.py  cleanup_local_artifacts.py  data.py  dataset_aliases.py  eval.py  push_to_hub.py  speedrun.sh  text_format.py  train.py  train_tokenizer.py  vast_access.py  vast_common.py  vast_create_instance.py  vast_destroy_instance.py  vast_search_offers.py  vast_show_instance.py
picollm/rlhf/: README.md  __init__.py  dpo_finetune.py
picollm/serve/: README.md  __init__.py  app.py  chat_cli.py  chat_web.py
picollm/sft_full/: finetune.py
picollm/sft_lora/: README.md  __init__.py  evaluate.py  finetune.py  merge_adapter.py  prepare_dataset.py
prompts/real_chatbot_workflow/: base_vs_chat_sft_prompts.md  base_vs_lora_prompts.md
scripts/: build_picollm_identity_dataset.py  export_picollm_to_gguf.py  export_picollm_to_transformers.py  picollm_release_lib.py  print_picollm_env.py  release_picollm_to_hf.py  restore_picollm_from_hf.py  run_picollm_local_checks.py  smoke_picollm_model_repo.py  sync_picollm_archive_to_hf.py  upload_picollm_archive_to_hf.py  upload_picollm_model_to_hf.py  verify_identity_asset.py  write_picollm_run_manifest.py
scripts/base_evaluation_flow/: run.py
scripts/base_training_flow/: run.py
scripts/causal_language_modeling/: demo.py
scripts/chat_format_and_sft/: demo.py
scripts/cli_and_web_chat/: chat_cli.py  chat_web.py
scripts/decoder_block/: demo.py
scripts/deployment/: build_demo_checkpoint.py  smoke_test.py  smoke_test_accelerated.py
scripts/embedding_layer/: demo.py
scripts/encoder_block/: demo.py
scripts/fastapi_chat_app/: app.py  serve.py
scripts/feed_forward_network/: demo.py
scripts/sft_flow/: demo.py
tests/: test_chat_interfaces.py  test_checkpoint_manager.py  test_exporters.py  test_identity_dataset.py
(+75 files in other folders)
