[project]
name = "llm"
version = "0.1.0"
description = "Teaching materials and runnable demos for an LLM concepts course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi>=0.116.1",
    "datasets>=4.3.0",
    "huggingface-hub>=0.36.0",
    "jupyterlab>=4.5.6",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "peft>=0.18.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "safetensors>=0.6.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.10.0",
    "tensorboard>=2.20.0",
    "transformers>=4.57.0",
    "trl>=0.24.0",
    "uvicorn>=0.35.0",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.6",
    "pytest>=8.4.2",
]
