[project]
name = "llm"
version = "0.1.0"
description = "Teaching materials and runnable demos for an LLM concepts course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "datasets>=4.3.0",
    "filelock>=3.19.1",
    "jinja2>=3.1.6",
    "jupyterlab>=4.5.6",
    "kernels>=0.11.7",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "psutil>=7.1.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rustbpe>=0.1.0",
    "safetensors>=0.6.2",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch>=2.10.0",
    "tensorboard>=2.20.0",
    "transformers>=4.57.0",
    "uvicorn>=0.35.0",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.10.0",
]
gpu = [
    "torch>=2.10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
