[project]
name = "picollm"
version = "0.1.0"
description = "picoLLM from-scratch training, inference, and chat tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "datasets>=4.3.0",
    "filelock>=3.19.1",
    "jinja2>=3.1.6",
    "jupyterlab>=4.5.6",
    "kernels>=0.11.7",
    "nbformat>=5.10.4",
    "nbconvert>=7.16.6",
    "numpy>=2.3.4",
    "psutil>=7.1.0",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.10",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rustbpe>=0.1.0",
    "safetensors>=0.6.2",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.1",
    "torch==2.9.1",
    "tensorboard>=2.20.0",
    "transformers>=4.57.0",
    "uvicorn>=0.35.0",
    "wandb>=0.23.0",
]

[project.scripts]
picollm-chat = "picollm.accelerated.chat.cli:main"
picollm-web = "picollm.accelerated.chat.web:main"
picollm-identity-smoke = "picollm.accelerated.chat.identity_smoke:main"
picollm-speedrun-doctor = "picollm.accelerated.speedrun_doctor:main"
picollm-restore-from-hf = "picollm.accelerated.entrypoints:restore_from_hf"
picollm-upload-model = "picollm.accelerated.entrypoints:upload_model_to_hf"
picollm-upload-archive = "picollm.accelerated.entrypoints:upload_archive_to_hf"
picollm-release = "picollm.accelerated.entrypoints:release_to_hf"
picollm-local-checks = "picollm.accelerated.entrypoints:run_local_checks"
picollm-print-env = "picollm.accelerated.entrypoints:print_env"
picollm-hf-smoke = "picollm.accelerated.entrypoints:smoke_model_repo"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
cpu = [
    "torch==2.9.1",
]
gpu = [
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv]
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]
